# ashpd

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .typos.toml  Cargo.toml  Dockerfile  README.md  ashpd.doap  deny.toml  update-interfaces.py
ashpd-backend-demo/: Cargo.toml
ashpd-backend-demo/data/: ashpd-gnome.portal
ashpd-backend-demo/src/: account.rs  account_preview.rs  account_preview.ui  file_chooser.rs  main.rs  screenshot.rs  settings.rs  wallpaper.rs  wallpaper_preview.rs  wallpaper_preview.ui
ashpd-demo/: Cargo.toml  README.md  meson.build  output.pcap
ashpd-demo/build-aux/: cargo.sh  com.belmoussaoui.ashpd.demo.Devel.json
ashpd-demo/build-aux/snap/: snapcraft.yaml
ashpd-demo/data/: com.belmoussaoui.ashpd.demo.desktop.in.in  com.belmoussaoui.ashpd.demo.gschema.xml.in  com.belmoussaoui.ashpd.demo.metainfo.xml.in.in  com.belmoussaoui.ashpd.demo.service.in  meson.build  resources.gresource.xml
ashpd-demo/data/resources/: style.css
ashpd-demo/data/resources/ui/: account.ui  background.ui  camera.ui  device.ui  documents.ui  dynamic_launcher.ui  dynamic_launcher_row.ui  email.ui  file_chooser.ui  global_shortcuts.ui  inhibit.ui  location.ui  network_monitor.ui  notification.ui  notification_widget.ui  open_uri.ui  portal_page.ui  print.ui  proxy_resolver.ui  remote_desktop.ui  screencast.ui  screenshot.ui  secret.ui  shortcuts.ui  sidebar_row.ui  usb.ui  usb_device_row.ui  usbdevicerow.ui  wallpaper.ui  window.ui
ashpd-demo/po/: POTFILES.in
ashpd-demo/src/: application.rs  config.rs.in  main.rs  meson.build  sidebar_row.rs  window.rs
ashpd-demo/src/portals/: documents.rs  mod.rs
ashpd-demo/src/portals/desktop/: account.rs  background.rs  camera.rs  device.rs  dynamic_launcher.rs  email.rs  file_chooser.rs  global_shortcuts.rs  inhibit.rs  location.rs  mod.rs  network_monitor.rs  notification.rs  open_uri.rs  print.rs  proxy_resolver.rs  remote_desktop.rs  screencast.rs  screenshot.rs  secret.rs  usb.rs  wallpaper.rs
ashpd-demo/src/widgets/: color_widget.rs  gst_paintable.rs  mod.rs  notification.rs  portal_page.rs  removable_row.rs  sidebar_row.rs
backend-demo/: Cargo.toml  README.md
backend-demo/data/: ashpd-backend-demo.portal  portals.conf
backend-demo/src/: access.rs  account.rs  main.rs  screencast.rs  screenshot.rs  secret.rs  settings.rs  wallpaper.rs
client/: Cargo.toml  README.md
client/examples/: input_capture.rs  screen_cast_gstreamer.rs  screen_cast_pw.rs
client/src/: app_id.rs  error.rs  helpers.rs  lib.rs  proxy.rs  registry.rs  uri.rs
client/src/activation_token/: wayland.rs
client/src/backend/: access.rs  account.rs  app_chooser.rs  background.rs  builder.rs  email.rs  file_chooser.rs  mod.rs  permission_store.rs  print.rs  request.rs  screencast.rs  screenshot.rs  secret.rs  session.rs  settings.rs  spawn.rs  usb.rs  wallpaper.rs
client/src/desktop/: account.rs  background.rs  camera.rs  clipboard.rs  color.rs  device.rs  dynamic_launcher.rs  email.rs  file_chooser.rs  game_mode.rs  global_shortcuts.rs  handle_token.rs  icon.rs  inhibit.rs  input_capture.rs  location.rs  memory_monitor.rs  mod.rs  network_monitor.rs  notification.rs  open_uri.rs  power_profile_monitor.rs  print.rs  proxy_resolver.rs  realtime.rs  remote_desktop.rs  request.rs  screencast.rs  screenshot.rs  secret.rs  session.rs  settings.rs  trash.rs  usb.rs  wallpaper.rs
client/src/documents/: file_transfer.rs  mod.rs
client/src/flatpak/: development.rs  mod.rs  update_monitor.rs
client/src/window_identifier/: gtk4.rs  mod.rs  wayland.rs
demo/: Cargo.toml
demo/backend/: Cargo.toml  README.md
demo/backend/data/: ashpd-backend-demo.portal
demo/backend/src/: access.rs  account.rs  main.rs  screencast.rs  screenshot.rs  secret.rs  settings.rs  wallpaper.rs
demo/client/: Cargo.toml  README.md  build.rs  meson.build  meson_options.txt
demo/client/build-aux/: com.belmoussaoui.ashpd.demo.Devel.json  dist-vendor.sh
demo/client/data/: com.belmoussaoui.ashpd.demo.desktop.in.in  com.belmoussaoui.ashpd.demo.metainfo.xml.in.in  meson.build  resources.gresource.xml
demo/client/data/resources/: style.css
demo/client/data/resources/ui/: account.ui  background.ui  camera.ui  device.ui  documents.ui  dynamic_launcher_row.ui  email.ui  file_chooser.ui  global_shortcuts.ui  inhibit.ui  input_capture.ui  network_monitor.ui  notification.ui  open_uri.ui  portal_page.ui  print.ui  proxy_resolver.ui  remote_desktop.ui  screencast.ui  screenshot.ui  secret.ui  settings.ui  shortcuts.ui  update_window.ui  usb.ui  usb_device_row.ui  wallpaper.ui  window.ui
demo/client/po/: LINGUAS  POTFILES.in  de.po  eu.po  ka.po  kk.po  pt.po  pt_BR.po  sl.po  sr.po  sv.po  uk.po  zh_CN.po
demo/client/src/: application.rs  config.rs.in  config_cargo.rs  main.rs  meson.build  update_window.rs  window.rs
demo/client/src/portals/: documents.rs  mod.rs
demo/client/src/portals/desktop/: account.rs  background.rs  camera.rs  device.rs  dynamic_launcher.rs  email.rs  file_chooser.rs  global_shortcuts.rs  inhibit.rs  input_capture.rs  location.rs  mod.rs  network_monitor.rs  notification.rs  open_uri.rs  print.rs  proxy_resolver.rs  remote_desktop.rs  screencast.rs  screenshot.rs  secret.rs  settings.rs  usb.rs  wallpaper.rs
demo/client/src/widgets/: gst_paintable.rs  mod.rs  notification.rs  portal_page.rs  removable_row.rs
examples/: screen_cast_gstreamer.rs  screen_cast_pw.rs
handles/: Cargo.toml
handles/src/: app_id.rs  lib.rs
handles/src/activation_token/: gtk4.rs  mod.rs  wayland.rs
handles/src/window_identifier/: mod.rs  wayland.rs
interfaces/: org.freedesktop.portal.Account.xml  org.freedesktop.portal.Background.xml  org.freedesktop.portal.Camera.xml  org.freedesktop.portal.Clipboard.xml  org.freedesktop.portal.Desktop.xml  org.freedesktop.portal.Documents.xml  org.freedesktop.portal.DynamicLauncher.xml  org.freedesktop.portal.Email.xml  org.freedesktop.portal.FileChooser.xml  org.freedesktop.portal.FileTransfer.xml  org.freedesktop.portal.Flatpak.xml  org.freedesktop.portal.GameMode.xml  org.freedesktop.portal.Inhibit.xml  (+21 more)
(+156 files in other folders)
