[workspace]
resolver = "2"

members = [
  "lib",
  "demo/backend",
  "demo/client",
]

[workspace.package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
keywords = ["portal", "flatpak", "xdg", "desktop", "dbus"]
license = "MIT"
repository = "https://github.com/bilelmoussaoui/ashpd"
rust-version = "1.75"
version = "0.11.0"
