[package]
name = "ashpd-backend-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
adw = {package = "libadwaita", version = "0.5", features = ["v1_2"] }
anyhow = "1.0"
async-trait = "0.1.60"
byteorder = "1.4.3"
futures-channel = "0.3.25"
futures-util = "0.3.25"
gettext-rs = "0.7.0"
gtk = { version = "0.7", package = "gtk4", features = ["v4_10"] }
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = "0.3.16"
url = "2.3.1"

zbus = {version = "3.6.2", features = ["gvariant"] }
once_cell = "1.17.0"

[dependencies.ashpd]
path = "../"
features = ["backend", "gtk4", "backend_gtk4", "tracing"]
