[package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2021"
name = "ashpd-demo"
version = "0.3.0"

[dependencies]
adw = {version = "0.4", package = "libadwaita", features = ["v1_3"]}
anyhow = "1.0"
ashpd = {version = "0.4", features = ["gtk4", "pipewire", "tracing"]}
chrono = {version = "0.4", default-features = false, features = ["clock"]}
futures = "0.3"
gettext-rs = {version = "0.7", features = ["gettext-system"]}
gst = {package = "gstreamer", version = "0.20"}
gst4gtk = {package = "gst-plugin-gtk4", version = "0.10", features = ["wayland", "x11egl", "x11glx"]}
gtk = {package = "gtk4", version = "0.6", features = ["gnome_44"]}
once_cell = "1.15"
serde = {version = "1.0", features = ["derive"]}
shumate = {version = "0.3", package = "libshumate"}
tracing = "0.1"
tracing-subscriber = "0.3"
url = {version = "2.3", features = ["serde"]}
