[package]
name = "ashpd-backend-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.60"
chrono = "0.4.39"
futures-util = "0.3.25"
#image = "0.25.5"
nix = { version = "0.29", features = ["user"], default-features = false}
tokio = { version = "1.0", features = ["io-util", "net", "time", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3.16"
url = "2.3.1"
#xcap = "0.3.3"
xdg-user = "0.2.1"
zbus = "5.0"

[dependencies.ashpd]
path = "../"
features = ["backend", "tracing"]
default-features = false
