[package]
authors.workspace = true
categories.workspace = true
description = "XDG portals wrapper in Rust using zbus"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ashpd"
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
async-std = ["zbus/async-io", "dep:async-fs", "dep:async-net", "futures-util/io"]
default = ["tokio"]

backend = ["async-trait"]

gtk4 = ["dep:gtk4"]
tokio = ["zbus/tokio", "dep:tokio"]
glib = ["dep:glib"]

[dependencies]
ashpd-handles = { path = "../handles", version = "0.1" }
async-fs = { version = "2.1", optional = true }
async-net = { version = "2.0", optional = true }
async-trait = { version = "0.1", optional = true }
enumflags2 = "0.7"
fastrand = "2.3"
futures-channel = "0.3"
futures-util = "0.3"
glib = { version = "0.21", optional = true }
gtk4 = { version = "0.10", optional = true }
pipewire = { version = "0.9", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tokio = { version = "1.43", features = [
    "fs",
    "io-util",
], optional = true, default-features = false }
tracing = { version = "0.1", optional = true }
url = { version = "2.5", features = ["serde"] }
zbus = { version = "5.0", default-features = false, features = ["url"] }

[dev-dependencies]
serde_json = "1.0"
reis = { version = "0.5", features = ["tokio"] }
pipewire = "0.9.0"
tokio = { version = "1.41", features = [ "rt-multi-thread", "macros" ] }
gst = { package = "gstreamer", version = "0.24" }
quick-xml = "0.38"

[package.metadata.docs.rs]
features = ["backend"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
