[package]
authors.workspace = true
categories.workspace = true
description = "XDG portals wrapper in Rust using zbus"
edition.workspace = true
keywords.workspace = true
license.workspace = true
name = "ashpd"
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[features]
async-io = ["zbus/async-io", "dep:async-fs", "dep:async-net", "futures-util/io"]
default = ["tokio"]

backend = [
    "backend_access",
    "backend_account",
    "backend_app_chooser",
    "backend_background",
    "backend_email",
    "backend_file_chooser",
    "backend_lockdown",
    "backend_permission_store",
    "backend_print",
    "backend_screencast",
    "backend_screenshot",
    "backend_secret",
    "backend_settings",
    "backend_usb",
    "backend_wallpaper",
]

backend_access = ["dep:async-trait"]
backend_account = ["dep:async-trait", "account"]
backend_app_chooser = ["dep:async-trait"]
backend_background = ["dep:async-trait", "dep:serde_repr"]
backend_email = ["dep:async-trait"]
backend_file_chooser = ["dep:async-trait", "file_chooser"]
backend_lockdown = ["dep:async-trait"]
backend_permission_store = ["dep:async-trait", "documents"]
backend_print = ["dep:async-trait", "print"]
backend_screencast = ["dep:async-trait", "screencast"]
backend_screenshot = ["dep:async-trait", "screenshot"]
backend_secret = ["dep:async-trait"]
backend_settings = ["dep:async-trait", "settings"]
backend_usb = ["dep:async-trait", "usb"]
backend_wallpaper = ["dep:async-trait", "wallpaper"]

account = ["dep:url", "zbus/url"]
background = []
camera = []
clipboard = []
dynamic_launcher = ["dep:serde_repr"]
email = []
file_chooser = ["dep:url", "zbus/url", "dep:serde_repr"]
game_mode = ["dep:serde_repr"]
global_shortcuts = []
inhibit = ["dep:serde_repr"]
input_capture = ["dep:serde_repr"]
location = ["dep:serde_repr"]
memory_monitor = []
network_monitor = ["dep:serde_repr"]
notification = []
open_uri = ["dep:url", "zbus/url"]
power_profile_monitor = []
print = ["dep:url", "zbus/url"]
proxy_resolver = ["dep:url", "zbus/url"]
realtime = []
remote_desktop = ["dep:serde_repr"]
screencast = ["dep:serde_repr"]
screenshot = ["dep:url", "zbus/url"]
secret = []
settings = []
trash = ["dep:serde_repr"]
usb = []
wallpaper = ["dep:url", "zbus/url"]
flatpak = ["dep:serde_repr"]
documents = ["dep:serde_repr"]

gtk4 = ["gtk4_x11", "gtk4_wayland"]
gtk4_wayland = ["gdk4wayland", "glib", "dep:gtk4", "dep:futures-channel"]
gtk4_x11 = ["gdk4x11", "glib", "dep:gtk4", "dep:futures-channel"]
raw_handle = ["raw-window-handle"]
tokio = ["zbus/tokio", "dep:tokio"]
glib = ["dep:glib"]
wayland = ["wayland-client", "wayland-protocols", "wayland-backend"]
pipewire = ["dep:pipewire", "dep:futures-channel"]

[dependencies]
async-fs = { version = "2.1", optional = true }
async-net = { version = "2.0", optional = true }
async-trait = { version = "0.1", optional = true }
enumflags2 = "0.7"
getrandom = "0.3"
futures-channel = { version = "0.3", optional = true }
futures-util = "0.3"
gdk4wayland = { package = "gdk4-wayland", version = "0.10", optional = true }
gdk4x11 = { package = "gdk4-x11", version = "0.10", optional = true, features = [ "xlib" ] }
glib = { version = "0.21", optional = true }
gtk4 = { version = "0.10", optional = true }
pipewire = { version = "0.9", optional = true }
raw-window-handle = { version = "0.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_repr = { version = "0.1", optional = true }
tokio = { version = "1.43", features = [
    "fs",
    "io-util",
], optional = true, default-features = false }
tracing = { version = "0.1", optional = true }
url = { version = "2.5", features = ["serde"], optional = true }
wayland-backend = { version = "0.3", optional = true, features = [
    "client_system",
] }
wayland-client = { version = "0.31", optional = true }
wayland-protocols = { version = "0.32", optional = true, features = [
    "unstable",
    "client",
    "staging",
] }
zbus = { version = "5.0", default-features = false }

[dev-dependencies]
serde_json = "1.0"
reis = { version = "0.5", features = ["tokio"] }
pipewire = "0.9.0"
tokio = { version = "1.41", features = [ "rt-multi-thread", "macros" ] }
gst = { package = "gstreamer", version = "0.24" }
quick-xml = "0.39"

[package.metadata.docs.rs]
features = ["backend", "gtk4", "raw_handle"]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
