[package]
name = "ashpd-backend-demo"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.60"
tokio = { version = "1.0", features = [
    "io-util",
    "net",
    "time",
    "macros",
    "rt-multi-thread",
] }
futures-util = "0.3.25"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3.16"
url = "2.3.1"
zbus = "5.13"

[dependencies.ashpd]
workspace = true
features = [
    "backend_access",
    "backend_account",
    "backend_screencast",
    "backend_screenshot",
    "backend_secret",
    "backend_wallpaper",
    "backend_settings",
    "tracing",
    "tokio",
]
