[package]
name = "ashpd-backend-demo"
version = "0.1.0"
edition.workspace = true
rust-version = "1.87"
license.workspace = true

[dependencies]
async-trait = "0.1.60"
tokio = { version = "1.50", features = [
    "io-util",
    "net",
    "time",
    "macros",
    "rt-multi-thread",
] }
futures-util = "0.3.25"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3.23"
zbus = "5.13"

[dependencies.ashpd]
workspace = true
features = [
    "backend",
    "account",
    "screencast",
    "screenshot",
    "secret",
    "wallpaper",
    "settings",
    "tracing",
    "tokio",
]
