[package]
authors = ["Bilal Elmoussaoui <bil.elmoussaoui@gmail.com>"]
edition = "2024"
license = "MIT"
name = "ashpd-demo"
version = "0.1.0"

[dependencies]
adw = { version = "0.9.0-alpha", package = "libadwaita", features = ["v1_9"] }
anyhow = "1.0"
ashpd = { path = "../../client", version = "0.13.0-alpha", default-features = false, features = [
    "tokio",
    "gtk4",
    "tracing",
    "pipewire",
    "account",
    "background",
    "camera",
    "clipboard",
    "dynamic_launcher",
    "email",
    "file_chooser",
    "global_shortcuts",
    "inhibit",
    "input_capture",
    "location",
    "network_monitor",
    "notification",
    "open_uri",
    "proxy_resolver",
    "remote_desktop",
    "screencast",
    "screenshot",
    "secret",
    "settings",
    "usb",
    "wallpaper",
    "flatpak",
    "documents",
    "print",
] }
async-channel = "2.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = "0.3"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gst = { package = "gstreamer", version = "0.25.0-alpha" }
gst4gtk = { package = "gst-plugin-gtk4", version = "0.15.0-alpha", features = [
    "wayland",
    "x11egl",
    "x11glx",
    "gtk_v4_14",
] }
gtk = { package = "gtk4", version = "0.11.0-alpha", features = ["v4_14"] }
gvdb-macros = "0.1"
rusb = "0.9.4"
serde = { version = "1.0", features = ["derive"] }
shumate = { version = "0.8.0-alpha", package = "libshumate" }
tokio = { version = "1.48", default-features = false, features = [
    "io-util",
    "net",
    "time",
    "rt-multi-thread",
    "macros",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
